--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <p>To do:</p>
       <ul class="tasks"></ul>
     </form>
-    <script type="module" src="dist/app.js"></script>
+    <script type="module" src="./dist/app.js"></script>
   </body>
 </html>
 
