--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Type</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <form class="container>" autocomplete="off">
-      <label for="name">Task</label>
+    <form class="container" autocomplete="off">
+      <label for="name">TS-tasklist-exercise</label>
       <input type="text" id="name" />
       <ul class="categories">
         <li>
@@ -47,7 +48,7 @@
       <p>To do:</p>
       <ul class="tasks"></ul>
     </form>
-    <script type="module" src="./dist/app.js"></script>
+    <script type="module" src="/dist/app.js" defer></script>
   </body>
 </html>
 
