Patch paths and build

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p>To do:</p>
       <ul class="tasks"></ul>
     </form>
-    <script type="module" src="/dist/app.js" defer></script>
+    <script type="module" src="/app.js" defer></script>
   </body>
 </html>
 
