--- a/src/static/index.html
+++ b/src/static/index.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>TypeScript</title>
     <link rel="stylesheet" href="./styles.css" />
-    <!-- <script type="module" src="./app.js"></script> -->
-    <script type="module" src="../../dist/app.js"></script>
+    <script type="module" src="./app.js"></script>
+    <!-- <script type="module" src="../../dist/app.js"></script> -->
   </head>
   <body>
     <form class="container" autocomplete="off">
