--- a/src/static/index.html
+++ b/src/static/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>TypeScript</title>
-    <link rel="stylesheet" href="./styles.css" />
-    <script type="module" src="./app.js"></script>
-    <!-- <script type="module" src="../../dist/app.js"></script> -->
+    <link rel="stylesheet" href="./static/styles.css" />
+    <script type="module" src="/app.js"></script>
+    <!-- Local development -->
+    <!-- <link rel="stylesheet" href="./styles.css" />
+    <script type="module" src="../../dist/app.js"></script> -->
   </head>
   <body>
     <form class="container" autocomplete="off">
