--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <title>TypeScript</title>
+    <title>Type</title>
     <link rel="stylesheet" href="./styles.css" />
-    <!-- <script type="module" src="./app.js"></script> -->
-    <script type="module" src="../../dist/app.js"></script>
+    <script type="module" src="./app.js"></script>
   </head>
   <body>
     <form class="container" autocomplete="off">
