--- a/src/static/index.html
+++ b/src/static/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./styles.css" />
     <!-- <script type="module" src="/app.js"></script> -->
     <!-- <script type="module" src="../app.js"></script> -->
-    <script type="module" src="./app.js"></script>
+    <!-- <script type="module" src="./app.js"></script> -->
     <!-- Local development -->
-    <!-- <script type="module" src="../../dist/app.js"></script> -->
+    <script type="module" src="../../dist/app.js"></script>
   </head>
   <body>
     <form class="container" autocomplete="off">
