--- a/src/static/index.html
+++ b/src/static/index.html
@@ -9,8 +9,8 @@
     <!-- Local development -->
     <!-- <link rel="stylesheet" href="./styles.css" /> -->
     <link rel="stylesheet" href="styles.css" />
-    <!-- <script type="module" src="/app.js"></script> -->
-    <script type="module" src="../app.js"></script>
+    <script type="module" src="/app.js"></script>
+    <!-- <script type="module" src="../app.js"></script> -->
     <!-- <script type="module" src="./app.js"></script> -->
     <!-- Local development -->
     <!-- <script type="module" src="../../dist/app.js"></script> -->
