--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>TypeScript</title>
-    <link rel="stylesheet" href="/static/styles.css" />
-    <script type="module" src="/app.js"></script>
+    <link rel="stylesheet" href="./styles.css" />
+    <script type="module" src="./app.js"></script>
+    <!-- <link rel="stylesheet" href="/static/styles.css" />
+    <script type="module" src="../app.js"></script> -->
     <!-- Local development -->
     <!-- <link rel="stylesheet" href="./styles.css" /> -->
     <!-- <link rel="stylesheet" href="./styles.css" />
